configs/dev/8qtOVN8a.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wallabag-dev-cluster-dns-1
  namespace: wallabag
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: wallabag-dev-cluster
      cnpg.io/instanceName: wallabag-dev-cluster-1
      cnpg.io/instanceRole: primary
      cnpg.io/podRole: instance
      role: primary
  ingress:
  - fromEndpoints:
    - matchLabels:
        cnpg.io/cluster: wallabag-dev-cluster
        cnpg.io/instanceName: wallabag-dev-cluster-2
        cnpg.io/instanceRole: replica
        cnpg.io/podRole: instance
        role: replica
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        cnpg.io/cluster: wallabag-dev-cluster
        cnpg.io/instanceName: wallabag-dev-cluster-3
        cnpg.io/instanceRole: replica
        cnpg.io/podRole: instance
        role: replica
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  egress:
  - {}
