configs/dev/9U41hhTf.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-dev-cluster-2-dns
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud-dev-cluster
      cnpg.io/instanceName: nextcloud-dev-cluster-2
      cnpg.io/instanceRole: replica
      cnpg.io/podRole: instance
      role: replica
  ingress:
  - {}
  egress:
  - toEndpoints:
    - matchLabels:
        cnpg.io/cluster: nextcloud-dev-cluster
        cnpg.io/instanceName: nextcloud-dev-cluster-1
        cnpg.io/instanceRole: primary
        cnpg.io/podRole: instance
        role: primary
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: coredns
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
