configs/dev/app-notification-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-notification-controller
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: kustomize-controller
    toPorts:
    - ports:
      - port: '9090'
        protocol: TCP
  egress:
  - {}
