configs/dev/app-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-operator
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app: operator
  ingress:
  - {}
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
