configs/dev/app-source-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-source-controller
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: source-controller
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: helm-controller
    toPorts:
    - ports:
      - port: '9090'
        protocol: TCP
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
    - ports:
      - port: '22'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: coredns
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
