configs/dev/external-secrets.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: helm.sh-chart-external-secrets-0.18.2
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      helm.sh/chart: external-secrets-0.18.2
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: kube-prometheus-stack
        k8s:app.kubernetes.io/managed-by: prometheus-operator
        k8s:app.kubernetes.io/name: prometheus
        k8s:app.kubernetes.io/version: 3.3.1
        k8s:io.cilium.k8s.namespace.labels.app: kube-prometheus-stack
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: monitoring
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: monitoring
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.namespace.labels.pod-security.kubernetes.io/enforce-version: latest
        k8s:io.cilium.k8s.namespace.labels.pod-security.kubernetes.io/enforce: privileged
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
        k8s:io.kubernetes.pod.namespace: monitoring
        k8s:operator.prometheus.io/name: kube-prometheus-stack
        k8s:operator.prometheus.io/shard: '0'
        k8s:prometheus: kube-prometheus-stack
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: coredns
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: connect
        k8s:app: onepassword-connect
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: onepassword
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: default
        k8s:io.kubernetes.pod.namespace: onepassword
        k8s:version: 1.7.3
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: external-secrets
        k8s:app.kubernetes.io/managed-by: Helm
        k8s:app.kubernetes.io/metrics: cert-controller
        k8s:app.kubernetes.io/name: external-secrets-cert-controller
        k8s:app.kubernetes.io/version: v0.18.2
        k8s:helm.sh/chart: external-secrets-0.18.2
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: external-secrets
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: external-secrets-cert-controller
        k8s:io.kubernetes.pod.namespace: external-secrets
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
