configs/dev/grafana-tailscale.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-network-policy
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app: bd958571-0680-4c5b-8151-b60a4b6c5b74
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource-ns: monitoring
      tailscale.com/parent-resource-type: ingress
      tailscale.com/parent-resource: kube-prometheus-stack-grafana
  ingress:
  - {}
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
