configs/dev/j03yy7fU.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-network-policy
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      operator.prometheus.io/name: kube-prometheus-stack
      operator.prometheus.io/shard: '0'
      prometheus: kube-prometheus-stack
  ingress:
  - fromEndpoints:
    - matchLabels:
        operator.prometheus.io/name: kube-prometheus-stack
        operator.prometheus.io/shard: '0'
        prometheus: kube-prometheus-stack
    toPorts:
    - ports:
      - port: '9090'
        protocol: TCP
    - ports:
      - port: '8080'
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: database-cnpg
        k8s:app.kubernetes.io/name: cloudnative-pg
        k8s:io.cilium.k8s.namespace.labels.app: database_operations
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: database
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: database-cnpg-cloudnative-pg
        k8s:io.kubernetes.pod.namespace: database
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: external-secrets
        k8s:app.kubernetes.io/managed-by: Helm
        k8s:app.kubernetes.io/name: external-secrets
        k8s:app.kubernetes.io/version: v0.18.2
        k8s:helm.sh/chart: external-secrets-0.18.2
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: external-secrets
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: external-secrets
        k8s:io.kubernetes.pod.namespace: external-secrets
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        helm.sh/chart: grafana-9.0.0
    toPorts:
    - ports:
      - port: '3000'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: coredns
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '9153'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: external-secrets
        k8s:app.kubernetes.io/managed-by: Helm
        k8s:app.kubernetes.io/metrics: cert-controller
        k8s:app.kubernetes.io/name: external-secrets-cert-controller
        k8s:app.kubernetes.io/version: v0.18.2
        k8s:helm.sh/chart: external-secrets-0.18.2
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: external-secrets
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: external-secrets-cert-controller
        k8s:io.kubernetes.pod.namespace: external-secrets
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: kube-prometheus-stack-operator
        chart: kube-prometheus-stack-72.3.0
        heritage: Helm
        release: kube-prometheus-stack
    toPorts:
    - ports:
      - port: '10250'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        operator.prometheus.io/name: kube-prometheus-stack
        operator.prometheus.io/shard: '0'
        prometheus: kube-prometheus-stack
    toPorts:
    - ports:
      - port: '9090'
        protocol: TCP
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        helm.sh/chart: kube-state-metrics-5.33.1
        release: kube-prometheus-stack
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: connect
        k8s:app: onepassword-connect
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: onepassword
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: default
        k8s:io.kubernetes.pod.namespace: onepassword
        k8s:version: 1.7.3
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: external-secrets
        k8s:app.kubernetes.io/managed-by: Helm
        k8s:app.kubernetes.io/metrics: webhook
        k8s:app.kubernetes.io/name: external-secrets-webhook
        k8s:app.kubernetes.io/version: v0.18.2
        k8s:helm.sh/chart: external-secrets-0.18.2
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: external-secrets
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: controllers
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: external-secrets-webhook
        k8s:io.kubernetes.pod.namespace: external-secrets
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
