configs/dev/kube-prometheus-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-prometheus-stack-network-policy
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      helm.sh/chart: kube-state-metrics-5.33.1
      release: kube-prometheus-stack
  ingress:
  - fromEndpoints:
    - matchLabels:
        operator.prometheus.io/name: kube-prometheus-stack
        operator.prometheus.io/shard: '0'
        prometheus: kube-prometheus-stack
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  egress:
  - {}
