configs/dev/kube-prometheus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-prometheus-stack-world
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app: 592b138c-27d9-4dda-b143-2b4895239437
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource-ns: monitoring
      tailscale.com/parent-resource-type: ingress
      tailscale.com/parent-resource: kube-prometheus-stack-prometheus
  ingress:
  - {}
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
