configs/dev/nextcloud-ingress-db.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-dev-cluster-network-policy
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud-dev-cluster
      cnpg.io/instanceName: nextcloud-dev-cluster-1
      cnpg.io/instanceRole: primary
      cnpg.io/podRole: instance
      role: primary
  ingress:
  - fromEndpoints:
    - matchLabels:
        cnpg.io/cluster: nextcloud-dev-cluster
        cnpg.io/instanceName: nextcloud-dev-cluster-3
        cnpg.io/instanceRole: replica
        cnpg.io/podRole: instance
        role: replica
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        cnpg.io/cluster: nextcloud-dev-cluster
        cnpg.io/instanceName: nextcloud-dev-cluster-2
        cnpg.io/instanceRole: replica
        cnpg.io/podRole: instance
        role: replica
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  egress:
  - {}
