configs/dev/w7VYxj5T.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pgadmin-network-policy-ts
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app: f7204f80-76fa-4b6f-883d-243560625b5c
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource-ns: database
      tailscale.com/parent-resource-type: ingress
      tailscale.com/parent-resource: database-pgadmin-pgadmin4
  ingress:
  - {}
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
