configs/dev/zDNNkLc2.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage-network-policy
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app: 63105327-8954-413a-894d-cef6f722eb63
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource-ns: homepage
      tailscale.com/parent-resource-type: ingress
      tailscale.com/parent-resource: homepage
  ingress:
  - {}
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
    - ports:
      - port: '41641'
        protocol: UDP
    - ports:
      - port: '43799'
        protocol: UDP
    - ports:
      - port: '43812'
        protocol: UDP
    - ports:
      - port: '3478'
        protocol: UDP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: homepage
        k8s:app.kubernetes.io/managed-by: Helm
        k8s:app.kubernetes.io/name: homepage
        k8s:app.kubernetes.io/part-of: homepage
        k8s:app.kubernetes.io/version: v1.3.2
        k8s:helm.sh/chart: homepage-4.0.0_bb970d19329e
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: homepage
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: apps
        k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: homepage
        k8s:io.kubernetes.pod.namespace: homepage
    toPorts:
    - ports:
      - port: '3000'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.cilium.k8s.policy.cluster: default
        k8s:io.cilium.k8s.policy.serviceaccount: coredns
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
